--- a/launcher.ini
+++ b/launcher.ini
@@ -6,12 +6,12 @@ type = Demo
 name = AND Demo
 description = Demonstrating AND in HAL
 image = andgate.png
-command = python run.py -c
+command = python run.py
 variant = default
 
 [anddemo2]
 name = AND Demo with HAL Scope and HAL Meter
 description = Demonstrating AND in HAL
 image = andgate.png
-command = python run.py -c -s -m
+command = python run.py -s -m
 variant = with HAL Scope and HAL Meter
